AIRCRAFT-RUNTIME-002 canonicalize assembly fixture digest state